--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "16.13.1",
     "react-bootstrap": "1.0.0",
     "react-dom": "16.13.1",
+    "react-icofont": "1.0.19",
     "react-router": "5.1.2",
     "react-router-bootstrap": "0.25.0",
     "react-router-dom": "5.1.2",
