--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "4.4.1",
     "react": "16.13.1",
     "react-bootstrap": "1.0.0",
+    "react-bootstrap-table-next": "4.0.0",
     "react-dom": "16.13.1",
     "react-icofont": "1.0.19",
     "react-router": "5.1.2",
