--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "4.4.1",
-    "moment": "2.24.0",
-    "react": "16.13.1",
-    "react-bootstrap": "1.0.0",
-    "react-bootstrap-table-next": "4.0.0",
-    "react-dom": "16.13.1",
-    "react-icofont": "1.0.19",
-    "react-moment": "0.9.7",
-    "react-router": "5.1.2",
-    "react-router-bootstrap": "0.25.0",
-    "react-router-dom": "5.1.2",
+    "bootstrap": "^4.4.1",
+    "mapbox-gl": "^1.9.1",
+    "moment": "^2.24.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-bootstrap-table-next": "^4.0.0",
+    "react-dom": "^16.13.1",
+    "react-icofont": "^1.0.19",
+    "react-moment": "^0.9.7",
+    "react-router": "^5.1.2",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1"
   },
   "scripts": {
