--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "react-bootstrap": "^1.0.0",
     "react-bootstrap-table-next": "^4.0.0",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
     "react-icofont": "^1.0.19",
     "react-moment": "^0.9.7",
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
