--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-toastify": "^5.5.0",
     "styled-components": "^5.1.0",
     "yup": "^0.28.4"
   },
